# siri_transit_api_client

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  setup.py_old  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  requirements.in  requirements.txt  siri_transit_api_client.rst  usage.rst
siri_transit_api_client/: __init__.py  cli.py  exceptions.py  holidays.py  lines.py  operators.py  patterns.py  siri_client.py  stop_monitoring.py  stop_places.py  stop_timetable.py  stops.py  timetable.py  vehicle_monitoring.py
src/siri_transit_api_client/: __init__.py  lines.py  patterns.py  shapes.py  siri_client.py  stop_monitoring.py  timetable.py
tests/: __init__.py  test_holidays.py  test_lines.py  test_operators.py  test_patterns.py  test_shapes.py  test_siri_client.py  test_siri_transit_api_client.py  test_stop_monitoring.py  test_stop_places.py  test_stop_timetable.py  test_stops.py  test_timetables.py  test_vehicle_monitoring.py
