[build-system]
requires = ['setuptools>=61.0.0', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'siri_transit_api_client'
version = '0.1.3'
description = 'API client for transit data using SIRI framework.'
readme = 'README.rst'
authors = [
    { name = 'Robert Hennessy', email = 'robertghennessy@gmail.com' },
]
license = { file = 'LICENSE' }
requires-python = '>=3.11'
dependencies = [
    "requests>=2.27.1",
    "responses>=0.20.0"
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.11',
    'Topic :: Scientific/Engineering'
]
keywords = ['511.org', 'Transit', 'Open 511 APIs', 'Standard Interface for Real-time Information', 'SIRI']

[project.urls]
homepage = 'https://github.com/robertghennessy/siri_transit_api_client'
documentation = 'https://github.com/robertghennessy/siri_transit_api_client'
repository = 'https://github.com/robertghennessy/siri_transit_api_client'

[project.optional-dependencies]
test = ['pytest>=6.2.4']


